# quantlens.github.io

./: .coveragerc  .dockerignore  .gitignore  CLIENT_README.md  DEPLOYMENT.md  LLM_JSON_Export_v6.pine  MARKETING_LAUNCH.md  MARKETING_LLMS.md  README.md  SETTINGS.md  astro.config.mjs  docker-compose.yml  index.html  macro_policy.py  netlify.toml  package-lock.json  package.json  pyproject.toml  sw.js  tailwind.config.cjs
.github/workflows/: ci.yml  deploy.yml  gh-pages.yml  indicator-tests.yml
indicator/: INPUTS.md  LLM_JSON_Export_v6.md
postman/: QuantLens.local_environment.json  QuantLens.postman_collection.json
public/: robots.txt
public/samples/: opusdt.sample.json
scripts/: check-health.ps1  dev-shell.ps1  run-all.ps1  run-api.ps1  run-ptsm.ps1  smoke-client.ps1  validate-release.ps1
services/api/: Dockerfile  data_api.py  requirements.txt
services/features/: requirements.txt
services/ptsm/: Dockerfile
site/: 404.html  app.js  contact.html  force-refresh.css  how.html  index.html  pricing.html  product.html  robots.txt  sitemap.xml  styles.css  sw.js  templates.html  thanks.html
site/_partials/: head-meta.html  staging-banner.html
site/assets/: staging.css
src/: styles.css
src/components/: EmailCapture.astro  Footer.astro  JsonTreeViewer.astro  LiveJsonDemo.astro  NavBar.astro  PricingGrid.astro  SocialProof.astro
src/layouts/: BaseLayout.astro  DocsLayout.astro
src/pages/: docs.astro  faq.astro  index.astro  pricing.astro  product.astro
tools/python_indicator_clone/: README.md  pyproject.toml  pytest.ini  requirements.txt
(+4 files in other folders)
