[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ql-indicator"
version = "0.1.0"
description = "QuantLens Indicator clone utilities (CCXT/YFinance fetch + JSON emitter)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QuantLens" }]
keywords = ["trading", "ccxt", "pandas", "yfinance", "indicator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ql-indicator = "ql_indicator.run:main"
